export const snapshot = {};

snapshot[`commitAll() > no grouping 1`] = `
[
  'import { VERSION } from "https://deno.land/std@0.204.0/version.ts";
import { createGraph } from "https://deno.land/x/deno_graph@0.59.1/mod.ts";
import { emojify } from "npm:node-emoji@2.1.0";
import { noop } from "./lib.ts";
',
  'import { VERSION } from "https://deno.land/std@0.204.0/version.ts";
export const noop = () => {};
',
]
`;

snapshot[`commitAll() > group by dependency name 1`] = `
[
  'import { VERSION } from "https://deno.land/std@0.200.0/version.ts";
import { createGraph } from "https://deno.land/x/deno_graph@0.50.0/mod.ts";
import { emojify } from "npm:node-emoji@2.1.0";
import { noop } from "./lib.ts";
',
  'import { VERSION } from "https://deno.land/std@0.204.0/version.ts";
export const noop = () => {};
',
]
`;

snapshot[`commitAll() > group by module (file) name 1`] = `
[
  'import { VERSION } from "https://deno.land/std@0.204.0/version.ts";
import { createGraph } from "https://deno.land/x/deno_graph@0.59.1/mod.ts";
import { emojify } from "npm:node-emoji@2.1.0";
import { noop } from "./lib.ts";
',
  'import { VERSION } from "https://deno.land/std@0.204.0/version.ts";
export const noop = () => {};
',
]
`;
